Resolve incorrect font sizes and content alignments

--- a/SecurityReporter/angularapp/src/app/project-management/components/radio-button-component/radio-button-component.component.css
+++ b/SecurityReporter/angularapp/src/app/project-management/components/radio-button-component/radio-button-component.component.css
@@ -6,9 +6,12 @@
     padding: 10px;
 }
 
-.radio-input{
-    display: flex;
-  }
+.radio-input {
+  display: flex;
+}
+.text {
+  margin-top: 8px;
+}
 
 .radio-input input{
   border: #f2f2f2;
